--- a/ci-operator/step-registry/hypershift/mce/agent/dualstack/conformance/hypershift-mce-agent-dualstack-conformance-workflow.yaml
+++ b/ci-operator/step-registry/hypershift/mce/agent/dualstack/conformance/hypershift-mce-agent-dualstack-conformance-workflow.yaml
@@ -6,6 +6,7 @@ workflow:
     allow_best_effort_post_steps: true
     allow_skip_on_success: true
     post:
+    - ref: wait
     - chain: hypershift-mce-agent-destroy
     - ref: baremetalds-packet-gather-metadata
     - chain: baremetalds-ipi-post
@@ -18,7 +19,6 @@ workflow:
     - ref: enable-qe-catalogsource
     - chain: hypershift-mce-agent-lvm
     - ref: hypershift-mce-install
-    - ref: wait
     - chain: hypershift-mce-agent-create
     env:
       LVM_OPERATOR_SUB_SOURCE: qe-app-registry
@@ -28,7 +28,6 @@ workflow:
       IP_STACK: v4v6
       DEVSCRIPTS_CONFIG: |
         IP_STACK=v4v6
-        HOST_IP_STACK=v4v6
         NETWORK_TYPE=OVNKubernetes
         VM_EXTRADISKS=true
         VM_EXTRADISKS_LIST=vda
@@ -36,7 +35,4 @@ workflow:
         EXTRA_WORKER_VCPU=8
         EXTRA_WORKER_MEMORY=16384
         EXTRA_WORKER_DISK=100
-        PROVISIONING_NETWORK_PROFILE=Disabled
-        REDFISH_EMULATOR_IGNORE_BOOT_DEVICE=True
-        IPv6=yes
-        IPv4=yes
+        PROVISIONING_NETWORK="172.23.0.0/16"
