--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -136,9 +136,10 @@ tests:
       MCE_VERSION: "2.4"
     workflow: hypershift-mce-agent-conformance
 - as: e2e-agent-ovn-mce-dualstack-conformance
+  cluster: build05
   cron: 0 4 * * *
   steps:
-    cluster_profile: equinix-ocp-metal
+    cluster_profile: equinix-ocp-metal-qe
     env:
       LVM_OPERATOR_SUB_CHANNEL: stable-4.14
       MCE_VERSION: "2.4"
