--- a/ci-operator/jobs/openshift/hypershift/openshift-hypershift-release-4.14-periodics.yaml
+++ b/ci-operator/jobs/openshift/hypershift/openshift-hypershift-release-4.14-periodics.yaml
@@ -150,7 +150,7 @@ periodics:
       secret:
         secretName: result-aggregator
 - agent: kubernetes
-  cluster: build01
+  cluster: build05
   cron: 0 4 * * *
   decorate: true
   decoration_config:
@@ -161,7 +161,8 @@ periodics:
     repo: hypershift
   labels:
     ci-operator.openshift.io/cloud: equinix-ocp-metal
-    ci-operator.openshift.io/cloud-cluster-profile: equinix-ocp-metal
+    ci-operator.openshift.io/cloud-cluster-profile: equinix-ocp-metal-qe
+    ci-operator.openshift.io/cluster: build05
     ci-operator.openshift.io/variant: periodics
     ci.openshift.io/generator: prowgen
     job-release: "4.14"
@@ -217,7 +218,7 @@ periodics:
         secretName: ci-pull-credentials
     - name: cluster-profile
       secret:
-        secretName: cluster-secrets-equinix-ocp-metal
+        secretName: cluster-secrets-equinix-ocp-metal-qe
     - name: pull-secret
       secret:
         secretName: registry-pull-credentials
