--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__arm64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__arm64-nightly.yaml
@@ -920,6 +920,7 @@ tests:
       OCP_ARCH: arm64
       TAG_VERSION: '@4.14'
     test:
+    - ref: wait
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-aws-ipi-sdn
 - as: aws-ipi-sdn-f28-destructive
