--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-operator__v4.13-hypershift-IIB.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-operator__v4.13-hypershift-IIB.yaml
@@ -33,11 +33,11 @@ resources:
       cpu: 100m
       memory: 200Mi
 tests:
-- as: smoke-rosa-rhods-hypershift-fips
+- as: smoke-rosa-rhods-hypershift
   steps:
     cluster_profile: aws-managed-cspi-qe
     env:
-      CLUSTER1_CONFIG: name=rosa-rhods;platform=rosa;region=us-east-2;version=4.13;channel-group=stable;compute-machine-type=m5.4xlarge;timeout=90m;replicas=6;fips=true;ocm-env=stage
+      CLUSTER1_CONFIG: name=rhods-hpc;platform=hypershift;region=us-east-2;version=4.13;channel-group=stable;compute-machine-type=m5.4xlarge;timeout=90m;replicas=6;fips=false;ocm-env=stage
       FIREWATCH_CONFIG: |
         [
           {"step": "operator-install", "failure_type": "all", "classification": "Provisioning - Operators", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-435"},
