--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall.yaml
@@ -28,6 +28,18 @@ tests:
     test:
     - ref: cluster-install
     - ref: cluster-uninstall
+- as: cluster-install-uninstall-hypershift-4-13-candidate-rand-name
+  cron: '@yearly'
+  steps:
+    cluster_profile: aws-managed-cspi-qe
+    env:
+      CLUSTER_NAME_PREFIX: hyper
+      CLUSTER1_CONFIG: platform=hypershift;region=us-west-2;version=4.13;compute-machine-type=m5.4xlarge;replicas=2;channel-group=candidate;expiration-time=4h;timeout=1h
+      S3_BUCKET_NAME: openshift-cli-installer
+      S3_BUCKET_PATH: openshift-ci
+    test:
+    - ref: cluster-install
+    - ref: cluster-uninstall
 - as: cluster-install-uninstall-rosa-4-14-candidate
   cron: '@yearly'
   steps:
