--- a/ci-operator/config/openshift/verification-tests/openshift-verification-tests-master__installer-rehearse-4.14.yaml
+++ b/ci-operator/config/openshift/verification-tests/openshift-verification-tests-master__installer-rehearse-4.14.yaml
@@ -72,10 +72,10 @@ tests:
     cluster_profile: azurestack-qe
     workflow: cucushift-installer-rehearse-azure-stack-ipi
 - as: installer-rehearse-gcp
-  cron: '@yearly'
+  interval: 960h
   steps:
     cluster_profile: gcp-qe
-    workflow: cucushift-installer-rehearse-gcp-ipi
+    workflow: cucushift-installer-rehearse-gcp-ipi-ovn-mtu-migrate
 - as: installer-rehearse-ibmcloud
   cron: '@yearly'
   steps:
