--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall.yaml
@@ -22,7 +22,7 @@ tests:
   steps:
     cluster_profile: aws-managed-cspi-qe
     env:
-      CLUSTER1_CONFIG: name=ci-hyper;platform=hypershift;region=us-west-2;version=4.13;compute-machine-type=m5.4xlarge;replicas=2;channel-group=candidate;expiration-time=4h;timeout=1h
+      CLUSTER1_CONFIG: name=ci-hyper;platform=hypershift;region=us-west-2;version=4.13;compute-machine-type=m5.4xlarge;replicas=2;channel-group=candidate;expiration-time=4h;timeout=1h;ocm-env=stage
       S3_BUCKET_NAME: openshift-cli-installer
       S3_BUCKET_PATH: openshift-ci
     test:
@@ -34,7 +34,7 @@ tests:
     cluster_profile: aws-managed-cspi-qe
     env:
       CLUSTER_NAME_PREFIX: hyper
-      CLUSTER1_CONFIG: platform=hypershift;region=us-west-2;version=4.13;compute-machine-type=m5.4xlarge;replicas=2;channel-group=candidate;expiration-time=4h;timeout=1h
+      CLUSTER1_CONFIG: platform=hypershift;region=us-west-2;version=4.13;compute-machine-type=m5.4xlarge;replicas=2;channel-group=candidate;expiration-time=4h;timeout=1h;ocm-env=stage
       S3_BUCKET_NAME: openshift-cli-installer
       S3_BUCKET_PATH: openshift-ci
     test:
