Adding e2e workflow for hcp-agent-ibmz workflow

--- a/ci-operator/step-registry/hypershift/mce/ibmz/conformance/hypershift-mce-ibmz-conformance-workflow.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/conformance/hypershift-mce-ibmz-conformance-workflow.yaml
@@ -8,12 +8,14 @@ workflow:
       - ref: ingress-aws-nlb-manifest
       - chain: ipi-aws-pre
       - ref: hypershift-mce-install
-      - ref: hypershift-mce-ibmz-create
+      - chain: hypershift-mce-ibmz-create
     test:
       - chain: hypershift-mce-ibmz-test
     post:
       - chain: hypershift-mce-ibmz-destroy
       - chain: ipi-aws-post
     env:
-      HYPERSHIFT_BASEDOMAIN: "hcps390x.com"
+      HYPERSHIFT_BASEDOMAIN: 'openshiftipi.com'
       HYPERSHIFT_NODE_COUNT: 2
+      IC_CLI_VERSION: '2.19.0'
+      IC_REGION: 'jp-tok'
