--- a/ci-operator/step-registry/hypershift/mce/ibmz/create/zvsi_compute/hypershift-mce-ibmz-create-zvsi_compute-ref.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/create/zvsi_compute/hypershift-mce-ibmz-create-zvsi_compute-ref.yaml
@@ -6,16 +6,16 @@ ref:
       documentation: "Base domain for hosted cluster"
     - name: HYPERSHIFT_NODE_COUNT
       documentation: "The number of ibmz nodes to join the agent cluster"
+    - name: IC_CLI_VERSION
+      documentation: "IBM Cloud CLI version"
+    - name: IC_REGION
+      documentation: "IBM Cloud Region"
+    - name: ZVSI_IMAGE
+      default: fedora-custom-s390x-dnd
+    - name: ZVSI_PROFILE
+      default: 'bz2-4x16'
     - name: AGENT_IBMZ_CREDENTIALS
       default: /etc/hypershift-agent-ibmz-credentials
-    - name: OCP_VERSION
-      documentation: "Openshift Version to use in OSImage config in AgentServiceConfig"
-    - name: OCP_RELEASE_FILE_URL
-      documentation: "URL for release.txt file of specific OCP version"
-    - name: ISO_URL
-      documentation: "ISO URL to use in OSImage config in AgentServiceConfig"
-    - name: ROOT_FS_URL
-      documentation: "ROOT FS URL to use in OSImage config in AgentServiceConfig"
   commands: hypershift-mce-ibmz-create-zvsi_compute-commands.sh
   from: dev-scripts
   grace_period: 15m0s
