--- a/ci-operator/step-registry/hypershift/mce/ibmz/destroy/zvsi_compute/hypershift-mce-ibmz-destroy-zvsi_compute-ref.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/destroy/zvsi_compute/hypershift-mce-ibmz-destroy-zvsi_compute-ref.yaml
@@ -1,22 +1,18 @@
 ref:
-  as: hypershift-mce-ibmz-create-hcp
+  as: hypershift-mce-ibmz-delete-zvsi_compute
   cli: latest
   env:
-    - name: OCP_VERSION
-      documentation: "Openshift Version to use in OSImage config in AgentServiceConfig"
-    - name: OCP_RELEASE_FILE_URL
-      documentation: "URL for release.txt file of specific OCP version"
-    - name: ISO_URL
-      documentation: "ISO URL to use in OSImage config in AgentServiceConfig"
-    - name: ROOT_FS_URL
-      documentation: "ROOT FS URL to use in OSImage config in AgentServiceConfig"
     - name: HYPERSHIFT_BASEDOMAIN
       documentation: "Base domain for hosted cluster"
     - name: HYPERSHIFT_NODE_COUNT
       documentation: "The number of ibmz nodes to join the agent cluster"
     - name: AGENT_IBMZ_CREDENTIALS
       default: /etc/hypershift-agent-ibmz-credentials
-  commands: hypershift-mce-ibmz-create-zvsi_compute-commands.sh
+    - name: IC_CLI_VERSION
+      documentation: "IBM Cloud CLI version"
+    - name: IC_REGION
+      documentation: "IBM Cloud Region"
+  commands: hypershift-mce-ibmz-destroy-zvsi_compute-commands.sh
   from: dev-scripts
   grace_period: 15m0s
   resources:
