--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -163,16 +163,15 @@ tests:
       ROOT_FS_URL: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.13/4.13.0/rhcos-4.13.0-ppc64le-live-rootfs.ppc64le.img
     workflow: hypershift-mce-power-conformance
 - as: e2e-mce-ibmz-conformance
-  cluster: build01
   cron: 0 4 * * *
   steps:
     cluster_profile: aws
     env:
-      ISO_URL: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/latest-4.14/rhcos-4.14.0-ec.2-s390x-live.s390x.iso
       MCE_VERSION: "2.4"
       OCP_VERSION: 4.14.0-ec.2
-      ROOT_FS_URL: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/latest-4.14/rhcos-4.14.0-ec.2-s390x-live-rootfs.s390x.img
       OCP_RELEASE_FILE_URL: 'https://mirror.openshift.com/pub/openshift-v4/s390x/clients/ocp-dev-preview/4.14.0-ec.2/release.txt'
+      ROOT_FS_URL: 'https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.14.0-ec.2/rhcos-4.14.0-ec.2-s390x-live-rootfs.s390x.img'
+      ISO_URL: 'https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.14.0-ec.2/rhcos-4.14.0-ec.2-s390x-live.s390x.iso'
     workflow: hypershift-mce-ibmz-conformance
 zz_generated_metadata:
   branch: release-4.14
