--- a/ci-operator/jobs/redhat-developer/service-binding-operator/redhat-developer-service-binding-operator-release-v1.4.x-periodics.yaml
+++ b/ci-operator/jobs/redhat-developer/service-binding-operator/redhat-developer-service-binding-operator-release-v1.4.x-periodics.yaml
@@ -226,7 +226,7 @@ periodics:
         secretName: result-aggregator
 - agent: kubernetes
   cluster: build05
-  cron: 0 6 23 11 *
+  cron: 0 6 * * 1
   decorate: true
   decoration_config:
     skip_cloning: true
