Updated IBM Power and Z libvirt jobs to enable kdump by default.

--- a/ci-operator/step-registry/ipi/conf/debug/kdump-gather-logs/ipi-conf-debug-kdump-gather-logs-ref.yaml
+++ b/ci-operator/step-registry/ipi/conf/debug/kdump-gather-logs/ipi-conf-debug-kdump-gather-logs-ref.yaml
@@ -16,5 +16,11 @@ ref:
     default: "/var/crash"
     documentation: |-
       Where the kdump logs are configured to be output to.
+  dnsConfig:
+    nameservers:
+    - 172.30.38.188
+    searches:
+    - "bastion-z.svc.cluster.local"
+    - "bastion-ppc64le-libvirt.svc.cluster.local"
   documentation: |-
     The kdump-gather-logs step will scan the nodes for kdump logs and add them to the artifacts.
