--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -186,9 +186,9 @@ tests:
     env:
       MCE_VERSION: "2.4"
       OCP_VERSION: 4.14.0-ec.2
-      OCP_RELEASE_FILE_URL: https://mirror.openshift.com/pub/openshift-v4/s390x/clients/ocp-dev-preview/4.14.0-ec.2/release.txt
-      ROOT_FS_URL: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.14.0-ec.2/rhcos-4.14.0-ec.2-s390x-live-rootfs.s390x.img
-      ISO_URL: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.14.0-ec.2/rhcos-4.14.0-ec.2-s390x-live.s390x.iso
+      OCP_RELEASE_FILE_URL: 'https://mirror.openshift.com/pub/openshift-v4/s390x/clients/ocp-dev-preview/4.14.0-ec.2/release.txt'
+      ROOT_FS_URL: 'https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.14.0-ec.2/rhcos-4.14.0-ec.2-s390x-live-rootfs.s390x.img'
+      ISO_URL: 'https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.14.0-ec.2/rhcos-4.14.0-ec.2-s390x-live.s390x.iso'
     workflow: hypershift-mce-ibmz-conformance
 zz_generated_metadata:
   branch: release-4.14
