Update export commands

--- a/ci-operator/step-registry/hypershift/mce/ibmz/destroy/hypershift-mce-ibmz-destroy-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/destroy/hypershift-mce-ibmz-destroy-chain.yaml
@@ -9,9 +9,12 @@ chain:
       commands: |-
         set -x
 
-        export hc_ns="hcp-ci"
-        export hc_name="agent-ibmz"
-        export hcp_ns="${hc_ns}-${hc_name}"
+        hc_ns="hcp-ci"
+        export hc_ns
+        hc_name="agent-ibmz"
+        export hc_name
+        hcp_ns="${hc_ns}-${hc_name}"
+        export hcp_ns
 
         echo "Scaling down nodepool ${hc_ns} to 0"
         oc -n ${hc_ns} scale nodepool ${hc_name} --replicas 0
