lvms:chore: replace bin input

--- a/ci-operator/config/openshift/lvm-operator/openshift-lvm-operator-main.yaml
+++ b/ci-operator/config/openshift/lvm-operator/openshift-lvm-operator-main.yaml
@@ -20,6 +20,10 @@ build_root:
 images:
 - dockerfile_path: Dockerfile
   from: ubi_minimal
+  inputs:
+    bin:
+      as:
+      - golang:1.20
   to: lvm-operator
 - context_dir: must-gather/
   dockerfile_path: Dockerfile
