--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-multi-cluster-smoke__v4.13.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-multi-cluster-smoke__v4.13.yaml
@@ -33,6 +33,7 @@ tests:
       PULL_SECRET_NAME: pull-secret
       S3_BUCKET_NAME: openshift-cli-installer
       S3_BUCKET_PATH: openshift-ci
+      CLUSTER_PARALLEL: "true"
     test:
     - ref: cluster-msi-tests
     workflow: cluster
