--- a/ci-operator/step-registry/addon/install/addon-install-ref.yaml
+++ b/ci-operator/step-registry/addon/install/addon-install-ref.yaml
@@ -31,7 +31,7 @@ ref:
     - name: ADDON6_CONFIG
       default: ""
       documentation: Refer to ADDON1_CONFIG documentation
-    - name: PARALLEL
+    - name: PARALLEL_INSTALL
       default: "false"
       documentation: To run addons install in parallel, set to "true"
     - name: API_HOST
