--- a/ci-operator/step-registry/addon/uninstall/addon-uninstall-ref.yaml
+++ b/ci-operator/step-registry/addon/uninstall/addon-uninstall-ref.yaml
@@ -28,7 +28,7 @@ ref:
     - name: ADDON6_CONFIG
       default: ""
       documentation: Refer to ADDON1_CONFIG documentation
-    - name: PARALLEL
+    - name: PARALLEL_INSTALL
       default: "false"
       documentation: To run addons uninstall in parallel, set to "true"
     - name: API_HOST
