--- a/ci-operator/step-registry/operator/install/operator-install-ref.yaml
+++ b/ci-operator/step-registry/operator/install/operator-install-ref.yaml
@@ -29,7 +29,7 @@ ref:
     - name: OPERATOR6_CONFIG
       default: ""
       documentation: Refer to OPERATOR1_CONFIG documentation
-    - name: PARALLEL
+    - name: PARALLEL_INSTALL
       default: "false"
       documentation: To run operators install in parallel, set to "true"
     - name: API_HOST
