--- a/ci-operator/step-registry/operator/uninstall/operator-uninstall-ref.yaml
+++ b/ci-operator/step-registry/operator/uninstall/operator-uninstall-ref.yaml
@@ -29,7 +29,7 @@ ref:
     - name: OPERATOR6_CONFIG
       default: ""
       documentation: Refer to OPERATOR1_CONFIG documentation
-    - name: PARALLEL
+    - name: PARALLEL_INSTALL
       default: "false"
       documentation: To run operators uninstall in parallel, set to "true"
     - name: CLUSTER_KUBECONFIG_PATH
