add power hypershift qe

--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
@@ -1032,6 +1032,61 @@ tests:
     test:
     - chain: openshift-e2e-test-hypershift-qe-destructive
     workflow: cucushift-installer-rehearse-aws-ipi-ovn-hypershift-guest
+- as: aws-ipi-ovn-hypershift-mce-power-guest-critical-f7
+  cron: 25 12 5,12,20,28 * *
+  steps:
+    cluster_profile: aws-qe
+    env:
+      BASE_DOMAIN: qe.devcluster.openshift.com
+      BASTION: rh-agent-ci-bastion.hypershift-ppc64le.com
+      BASTION_CI_SCRIPTS_DIR: /root/agent-ci/scripts
+      CIS_DOMAIN_ID: 8bfae88c85977dade9d37d02854c45c3
+      CIS_INSTANCE: hypershift-on-power
+      E2E_RUN_TAGS: '@amd64 and @aws-ipi and @network-ovnkubernetes and @critical
+        and @hypershift-hosted and not @fips'
+      HYPERSHIFT_BASE_DOMAIN: hypershift-ppc64le.com
+      HYPERSHIFT_NODE_COUNT: "1"
+      ISO_URL: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.13/4.13.0/rhcos-4.13.0-ppc64le-live.ppc64le.iso
+      MCE_VERSION: "2.4"
+      OPENSHIFT_VERSION: 4.13.0
+      POWERVS_IMAGE: rhcos-none
+      POWERVS_INSTANCE_CRN: 'crn:v1:bluemix:public:power-iaas:tok04:a/c265c8cefda241ca9c107adcbbacaa84:d04e2b0c-58aa-4e64-85c1-ecb5ab00d03d::'
+      POWERVS_NETWORK: private-net
+      RHCOS_VERSION: 413.92.202305041429-0
+      ROOT_FS_URL: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.13/4.13.0/rhcos-4.13.0-ppc64le-live-rootfs.ppc64le.img
+      TAG_VERSION: '@4.14'
+      TEST_FILTERS: ~ChkUpgrade&;~DisconnectedOnly&;~NonPreRelease&;~HyperShiftMGMT&;~MicroShiftOnly&;~NonHyperShiftHOST&;~Serial&;~Disruptive&
+      TEST_IMPORTANCE: Critical
+    test:
+    - chain: openshift-e2e-test-hypershift-qe
+    workflow: cucushift-installer-rehearse-aws-ipi-ovn-hypershift-mce-power-guest
+- as: aws-ipi-ovn-hypershift-mce-power-mgmt-critical-f7
+  cron: 11 14 3,10,18,26 * *
+  steps:
+    cluster_profile: aws-qe
+    env:
+      BASE_DOMAIN: qe.devcluster.openshift.com
+      BASTION: rh-agent-ci-bastion.hypershift-ppc64le.com
+      BASTION_CI_SCRIPTS_DIR: /root/agent-ci/scripts
+      CIS_DOMAIN_ID: 8bfae88c85977dade9d37d02854c45c3
+      CIS_INSTANCE: hypershift-on-power
+      HYPERSHIFT_BASE_DOMAIN: hypershift-ppc64le.com
+      HYPERSHIFT_NODE_COUNT: "1"
+      ISO_URL: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.13/4.13.0/rhcos-4.13.0-ppc64le-live.ppc64le.iso
+      MCE_VERSION: "2.4"
+      OPENSHIFT_VERSION: 4.13.0
+      POWERVS_IMAGE: rhcos-none
+      POWERVS_INSTANCE_CRN: 'crn:v1:bluemix:public:power-iaas:tok04:a/c265c8cefda241ca9c107adcbbacaa84:d04e2b0c-58aa-4e64-85c1-ecb5ab00d03d::'
+      POWERVS_NETWORK: private-net
+      RHCOS_VERSION: 413.92.202305041429-0
+      ROOT_FS_URL: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.13/4.13.0/rhcos-4.13.0-ppc64le-live-rootfs.ppc64le.img
+      TEST_ADDITIONAL: Hypershift|Network_Observability
+      TEST_FILTERS: ~ChkUpgrade&;~DisconnectedOnly&;~MicroShiftOnly&;HyperShiftMGMT&
+      TEST_IMPORTANCE: Critical
+      TEST_TIMEOUT: "30"
+    test:
+    - chain: openshift-e2e-test-hypershift-qe-mgmt
+    workflow: cucushift-installer-rehearse-aws-ipi-ovn-hypershift-mce-power
 - as: aws-ipi-ovn-hypershift-mgmt-critical-f7
   cron: 19 5 4,11,19,27 * *
   steps:
