--- a/ci-operator/config/maistra/istio-operator/maistra-istio-operator-maistra-3.0.yaml
+++ b/ci-operator/config/maistra/istio-operator/maistra-istio-operator-maistra-3.0.yaml
@@ -1,19 +1,19 @@
 base_images:
   cli:
-    name: "4.12"
+    name: "4.13"
     namespace: ocp
     tag: cli
 build_root:
   image_stream_tag:
     name: maistra-builder
     namespace: ci
-    tag: "3.0"
+    tag: upstream-master
   use_build_cache: true
 releases:
   latest:
     release:
       channel: stable
-      version: "4.12"
+      version: "4.13"
 resources:
   '*':
     limits:
@@ -62,7 +62,7 @@ tests:
       GOBIN: /gobin
       GOCACHE: /tmp/cache
       GOMODCACHE: /tmp/cache
-      MAISTRA_BUILDER_IMAGE: registry.ci.openshift.org/ci/maistra-builder:3.0
+      MAISTRA_BUILDER_IMAGE: registry.ci.openshift.org/ci/maistra-builder:upstream-master
       MAISTRA_NAMESPACE: maistra-e2e-test
       MAISTRA_SC_POD: maistra-e2e-test-sc-pod
       XDG_CACHE_HOME: /tmp/cache
@@ -117,7 +117,7 @@ tests:
     dependencies:
       RELEASE_IMAGE_LATEST: release:latest
     env:
-      MAISTRA_BUILDER_IMAGE: registry.ci.openshift.org/ci/maistra-builder:3.0
+      MAISTRA_BUILDER_IMAGE: registry.ci.openshift.org/ci/maistra-builder:upstream-master
       MAISTRA_NAMESPACE: maistra-e2e-test
       MAISTRA_SC_POD: maistra-e2e-test-sc-pod
       XDG_CACHE_HOME: /tmp/cache
@@ -174,7 +174,7 @@ tests:
     dependencies:
       RELEASE_IMAGE_LATEST: release:latest
     env:
-      MAISTRA_BUILDER_IMAGE: registry.ci.openshift.org/ci/maistra-builder:3.0
+      MAISTRA_BUILDER_IMAGE: registry.ci.openshift.org/ci/maistra-builder:upstream-master
       MAISTRA_NAMESPACE: maistra-nightly-images
       MAISTRA_SC_POD: maistra-nightly-images-pod
     test:
