update branch name to release-0.11
Signed-off-by: heyselbi <selbi@redhat.com>

--- a/ci-operator/config/opendatahub-io/modelmesh-serving/opendatahub-io-modelmesh-serving-release-0.11.yaml
+++ b/ci-operator/config/opendatahub-io/modelmesh-serving/opendatahub-io-modelmesh-serving-release-0.11.yaml
@@ -118,6 +118,6 @@ tests:
       IMAGE_TAG: v0.11.0
     workflow: opendatahub-io-ci-image-mirror
 zz_generated_metadata:
-  branch: release-v0.11.0-final
+  branch: release-0.11
   org: opendatahub-io
   repo: modelmesh-serving
