--- a/ci-operator/jobs/opendatahub-io/modelmesh-serving/opendatahub-io-modelmesh-serving-release-0.11-postsubmits.yaml
+++ b/ci-operator/jobs/opendatahub-io/modelmesh-serving/opendatahub-io-modelmesh-serving-release-0.11-postsubmits.yaml
@@ -3,7 +3,7 @@ postsubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^release-v0\.11\.0-final$
+    - ^release-0\.11$
     cluster: build01
     decorate: true
     decoration_config:
@@ -12,7 +12,7 @@ postsubmits:
       ci-operator.openshift.io/is-promotion: "true"
       ci.openshift.io/generator: prowgen
     max_concurrency: 1
-    name: branch-ci-opendatahub-io-modelmesh-serving-release-v0.11.0-final-images
+    name: branch-ci-opendatahub-io-modelmesh-serving-release-0.11-images
     spec:
       containers:
       - args:
@@ -58,7 +58,7 @@ postsubmits:
   - agent: kubernetes
     always_run: false
     branches:
-    - ^release-v0\.11\.0-final$
+    - ^release-0\.11$
     cluster: build01
     decorate: true
     decoration_config:
@@ -66,7 +66,7 @@ postsubmits:
     labels:
       ci.openshift.io/generator: prowgen
     max_concurrency: 1
-    name: branch-ci-opendatahub-io-modelmesh-serving-release-v0.11.0-final-stable-image-mirror
+    name: branch-ci-opendatahub-io-modelmesh-serving-release-0.11-stable-image-mirror
     run_if_changed: ^(apis/.*|controllers/.*|fvt/.*|pkg/.*|scripts/.*|proto/.*|config/.*|Makefile|main\.go|Dockerfile|version|go\.mod|go\.sum)
     spec:
       containers:
@@ -111,7 +111,7 @@ postsubmits:
   - agent: kubernetes
     always_run: false
     branches:
-    - ^release-v0\.11\.0-final$
+    - ^release-0\.11$
     cluster: build01
     decorate: true
     decoration_config:
@@ -119,7 +119,7 @@ postsubmits:
     labels:
       ci.openshift.io/generator: prowgen
     max_concurrency: 1
-    name: branch-ci-opendatahub-io-modelmesh-serving-release-v0.11.0-final-upstream-version-image-mirror
+    name: branch-ci-opendatahub-io-modelmesh-serving-release-0.11-upstream-version-image-mirror
     run_if_changed: ^(apis/.*|controllers/.*|fvt/.*|pkg/.*|scripts/.*|proto/.*|config/.*|Makefile|main\.go|Dockerfile|version|go\.mod|go\.sum)
     spec:
       containers:
