--- a/ci-operator/jobs/opendatahub-io/modelmesh-serving/opendatahub-io-modelmesh-serving-release-0.11-presubmits.yaml
+++ b/ci-operator/jobs/opendatahub-io/modelmesh-serving/opendatahub-io-modelmesh-serving-release-0.11-presubmits.yaml
@@ -3,9 +3,9 @@ presubmits:
   - agent: kubernetes
     always_run: false
     branches:
-    - ^release-v0\.11\.0-final$
-    - ^release-v0\.11\.0-final-
-    cluster: build02
+    - ^release-0\.11$
+    - ^release-0\.11-
+    cluster: build04
     context: ci/prow/fvt
     decorate: true
     decoration_config:
@@ -15,7 +15,7 @@ presubmits:
       ci-operator.openshift.io/cloud-cluster-profile: gcp
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-opendatahub-io-modelmesh-serving-release-v0.11.0-final-fvt
+    name: pull-ci-opendatahub-io-modelmesh-serving-release-0.11-fvt
     rerun_command: /test fvt
     run_if_changed: ^(apis/.*|controllers/.*|fvt/.*|pkg/.*|scripts/.*|proto/.*|config/.*|Makefile|main\.go|Dockerfile|go\.mod|go\.sum)
     spec:
@@ -82,8 +82,8 @@ presubmits:
   - agent: kubernetes
     always_run: false
     branches:
-    - ^release-v0\.11\.0-final$
-    - ^release-v0\.11\.0-final-
+    - ^release-0\.11$
+    - ^release-0\.11-
     cluster: build03
     context: ci/prow/fvt-odh-manifests
     decorate: true
@@ -94,7 +94,7 @@ presubmits:
       ci-operator.openshift.io/cloud-cluster-profile: aws
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-opendatahub-io-modelmesh-serving-release-v0.11.0-final-fvt-odh-manifests
+    name: pull-ci-opendatahub-io-modelmesh-serving-release-0.11-fvt-odh-manifests
     rerun_command: /test fvt-odh-manifests
     run_if_changed: ^(opendatahub/odh-manifests)
     spec:
@@ -157,8 +157,8 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^release-v0\.11\.0-final$
-    - ^release-v0\.11\.0-final-
+    - ^release-0\.11$
+    - ^release-0\.11-
     cluster: build01
     context: ci/prow/images
     decorate: true
@@ -167,7 +167,7 @@ presubmits:
     labels:
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-opendatahub-io-modelmesh-serving-release-v0.11.0-final-images
+    name: pull-ci-opendatahub-io-modelmesh-serving-release-0.11-images
     rerun_command: /test images
     spec:
       containers:
@@ -207,8 +207,8 @@ presubmits:
   - agent: kubernetes
     always_run: false
     branches:
-    - ^release-v0\.11\.0-final$
-    - ^release-v0\.11\.0-final-
+    - ^release-0\.11$
+    - ^release-0\.11-
     cluster: build01
     context: ci/prow/pr-image-mirror
     decorate: true
@@ -217,7 +217,7 @@ presubmits:
     labels:
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-opendatahub-io-modelmesh-serving-release-v0.11.0-final-pr-image-mirror
+    name: pull-ci-opendatahub-io-modelmesh-serving-release-0.11-pr-image-mirror
     rerun_command: /test pr-image-mirror
     run_if_changed: ^(apis/.*|controllers/.*|fvt/.*|pkg/.*|scripts/.*|proto/.*|config/.*|Makefile|main\.go|Dockerfile|version|go\.mod|go\.sum)
     spec:
@@ -264,8 +264,8 @@ presubmits:
   - agent: kubernetes
     always_run: false
     branches:
-    - ^release-v0\.11\.0-final$
-    - ^release-v0\.11\.0-final-
+    - ^release-0\.11$
+    - ^release-0\.11-
     cluster: build01
     context: ci/prow/unit
     decorate: true
@@ -274,7 +274,7 @@ presubmits:
     labels:
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-opendatahub-io-modelmesh-serving-release-v0.11.0-final-unit
+    name: pull-ci-opendatahub-io-modelmesh-serving-release-0.11-unit
     rerun_command: /test unit
     run_if_changed: ^(apis/.*|controllers/.*|pkg/.*|main\.go|Dockerfile|go\.mod|go\.sum)
     spec:
