--- a/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
@@ -40,7 +40,7 @@ presubmits:
             secretKeyRef:
               key: appid
               name: openshift-prow-github-app
-        image: registry.ci.openshift.org/ci/check-gh-automation:latest
+        image: check-gh-automation:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -72,7 +72,7 @@ presubmits:
       containers:
       - command:
         - ./hack/validate-ci-secret-boostrap.sh
-        image: registry.ci.openshift.org/ci/ci-secret-bootstrap:latest
+        image: ci-secret-bootstrap:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -102,7 +102,7 @@ presubmits:
         - ./clusters/hive/pools
         command:
         - clusterimageset-updater
-        image: registry.ci.openshift.org/ci/clusterimageset-updater:latest
+        image: clusterimageset-updater:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -143,7 +143,7 @@ presubmits:
             secretKeyRef:
               key: url
               name: ci-slack-api-url
-        image: registry.ci.openshift.org/ci/applyconfig:latest
+        image: applyconfig:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -191,7 +191,7 @@ presubmits:
             secretKeyRef:
               key: arm01-id
               name: arm01-dex-oidc
-        image: registry.ci.openshift.org/ci/applyconfig:latest
+        image: applyconfig:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -258,7 +258,7 @@ presubmits:
       containers:
       - command:
         - hack/validate-boskos.sh
-        image: registry.ci.openshift.org/ci/python-validation
+        image: python-validation
         imagePullPolicy: Always
         name: ""
         resources:
@@ -284,7 +284,7 @@ presubmits:
         - ./
         command:
         - hack/validate-ci-build-clusters.sh
-        image: registry.ci.openshift.org/ci/cluster-init:latest
+        image: cluster-init:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -327,7 +327,7 @@ presubmits:
             secretKeyRef:
               key: url
               name: ci-slack-api-url
-        image: registry.ci.openshift.org/ci/applyconfig:latest
+        image: applyconfig:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -386,7 +386,7 @@ presubmits:
             secretKeyRef:
               key: url
               name: ci-slack-api-url
-        image: registry.ci.openshift.org/ci/applyconfig:latest
+        image: applyconfig:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -435,7 +435,7 @@ presubmits:
         env:
         - name: HOME
           value: /tmp
-        image: registry.ci.openshift.org/ci/applyconfig:latest
+        image: applyconfig:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -484,7 +484,7 @@ presubmits:
         env:
         - name: HOME
           value: /tmp
-        image: registry.ci.openshift.org/ci/applyconfig:latest
+        image: applyconfig:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -533,7 +533,7 @@ presubmits:
         env:
         - name: HOME
           value: /tmp
-        image: registry.ci.openshift.org/ci/applyconfig:latest
+        image: applyconfig:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -582,7 +582,7 @@ presubmits:
         env:
         - name: HOME
           value: /tmp
-        image: registry.ci.openshift.org/ci/applyconfig:latest
+        image: applyconfig:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -846,7 +846,7 @@ presubmits:
         - ./
         command:
         - hack/validate-template-deprecation.sh
-        image: registry.ci.openshift.org/ci/template-deprecator:latest
+        image: template-deprecator:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -898,7 +898,7 @@ presubmits:
         - ./
         command:
         - hack/validate-generated-dashboards.sh
-        image: registry.ci.openshift.org/ci/dashboards-validation:latest
+        image: dashboards-validation:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -931,7 +931,7 @@ presubmits:
         env:
         - name: HOME
           value: /tmp
-        image: registry.ci.openshift.org/ci/applyconfig:latest
+        image: applyconfig:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -973,7 +973,7 @@ presubmits:
         - --validate-config=core-services/jira-lifecycle-plugin/config.yaml
         command:
         - jira-lifecycle-plugin
-        image: registry.ci.openshift.org/ci/jira-lifecycle-plugin
+        image: jira-lifecycle-plugin
         imagePullPolicy: Always
         name: ""
         resources:
@@ -1006,7 +1006,7 @@ presubmits:
         env:
         - name: HOME
           value: /tmp
-        image: registry.ci.openshift.org/ci/applyconfig:latest
+        image: applyconfig:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -1127,7 +1127,7 @@ presubmits:
         - ./ci-operator/config
         command:
         - hack/validate-ci-operator-config-filename.py
-        image: registry.ci.openshift.org/ci/python-validation
+        image: python-validation
         imagePullPolicy: Always
         name: ""
         resources:
@@ -1153,7 +1153,7 @@ presubmits:
         - ./
         command:
         - hack/validate-prow-job-semantics.py
-        image: registry.ci.openshift.org/ci/python-validation
+        image: python-validation
         imagePullPolicy: Always
         name: ""
         resources:
@@ -1179,7 +1179,7 @@ presubmits:
         - --validate-configs=core-services/release-controller/_releases
         command:
         - release-controller
-        image: registry.ci.openshift.org/ci/release-controller
+        image: release-controller
         imagePullPolicy: Always
         name: ""
         resources:
@@ -1204,7 +1204,7 @@ presubmits:
         - ./
         command:
         - hack/validate-release-controller-config.sh
-        image: registry.ci.openshift.org/ci/python-validation
+        image: python-validation
         imagePullPolicy: Always
         name: ""
         resources:
@@ -1334,7 +1334,7 @@ presubmits:
         - ./
         command:
         - hack/validate-registry-commands.sh
-        image: registry.ci.openshift.org/ci/shellcheck
+        image: shellcheck
         imagePullPolicy: Always
         name: ""
         resources:
@@ -1392,7 +1392,7 @@ presubmits:
         env:
         - name: HOME
           value: /tmp
-        image: registry.ci.openshift.org/ci/applyconfig:latest
+        image: applyconfig:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -1441,7 +1441,7 @@ presubmits:
         env:
         - name: HOME
           value: /tmp
-        image: registry.ci.openshift.org/ci/applyconfig:latest
+        image: applyconfig:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -1525,7 +1525,7 @@ presubmits:
             --validate-only=true
         command:
         - /bin/bash
-        image: registry.ci.openshift.org/ci/pr-reminder:latest
+        image: pr-reminder:latest
         imagePullPolicy: Always
         name: ""
         resources:
@@ -1568,7 +1568,7 @@ presubmits:
         - hack
         command:
         - pylint
-        image: registry.ci.openshift.org/ci/python-validation
+        image: python-validation
         imagePullPolicy: Always
         name: ""
         resources:
@@ -1631,7 +1631,7 @@ presubmits:
         - OWNERS_ALIASES
         command:
         - yamllint
-        image: registry.ci.openshift.org/ci/yamllint:latest
+        image: yamllint:latest
         imagePullPolicy: Always
         name: ""
         resources:
