Changing the stream to nightly

--- a/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-operator-ocp4.13-lp-interop.yaml
+++ b/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-operator-ocp4.13-lp-interop.yaml
@@ -20,7 +20,7 @@ releases:
   latest:
     candidate:
       product: ocp
-      stream: ci
+      stream: nightly
       version: "4.13"
 resources:
   '*':
