Updates the node-type

--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__aws-4.14.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__aws-4.14.yaml
@@ -86,7 +86,7 @@ tests:
       COMPUTE_NODE_REPLICAS: "9"
       COMPUTE_NODE_TYPE: m5.xlarge
       LOKI_USE_SERVICEMONITOR: "false"
-      OPENSHIFT_INFRA_NODE_INSTANCE_TYPE: c5.4xlarge
+      OPENSHIFT_INFRA_NODE_INSTANCE_TYPE: r5.xlarge
       SET_ENV_BY_PLATFORM: custom
     post:
     - chain: ipi-aws-post
