--- a/ci-operator/step-registry/openshift/upgrade/gcp/ovn/openshift-upgrade-gcp-ovn-workflow.yaml
+++ b/ci-operator/step-registry/openshift/upgrade/gcp/ovn/openshift-upgrade-gcp-ovn-workflow.yaml
@@ -20,7 +20,7 @@ workflow:
       TEST_SUITE: ""
       TEST_UPGRADE_OPTIONS: ""
       FAIL_ON_CORE_DUMP: "false"
-      COMPUTE_NODE_TYPE: e2-custom-6-16384
+      CONTROL_PLANE_INSTANCE_TYPE: e2-custom-6-16383
   documentation: |-
     The Openshift E2E GCP OVN workflow executes the upgrade end-to-end test suite on GCP with a default cluster
     configuration and Loki as log collector, exercising an upgrade during the process.
