--- a/ci-operator/step-registry/openshift/upgrade/gcp/ovn-rt/openshift-upgrade-gcp-ovn-rt-workflow.yaml
+++ b/ci-operator/step-registry/openshift/upgrade/gcp/ovn-rt/openshift-upgrade-gcp-ovn-rt-workflow.yaml
@@ -23,7 +23,8 @@ workflow:
       TEST_SUITE: ""
       TEST_UPGRADE_OPTIONS: ""
       RT_ENABLED: "true"
-      COMPUTE_NODE_TYPE: e2-custom-6-16384
+      COMPUTE_NODE_TYPE: n2-standard-8
+      CONTROL_PLANE_INSTANCE_TYPE: e2-custom-6-16384
   documentation: |-
     The Openshift E2E GCP OVN Realtime Kernel workflow executes the upgrade end-to-end test suite on GCP with a default cluster
     configuration and Loki as log collector, exercising an upgrade during the process.
