concurrent builds test timeout

--- a/ci-operator/step-registry/openshift-qe/conc-builds/openshift-qe-conc-builds-ref.yaml
+++ b/ci-operator/step-registry/openshift-qe/conc-builds/openshift-qe-conc-builds-ref.yaml
@@ -4,6 +4,7 @@ ref:
     namespace: ci
     name: ocp-qe-perfscale-ci
     tag: latest
+  timeout: 4h
   commands: openshift-qe-conc-builds-commands.sh
   credentials:
   - namespace: test-credentials # this entry injects the custom credential
@@ -19,7 +20,7 @@ ref:
     documentation: |-
       Define the build list. 
   - name: APP_LIST
-    default: "cakephp eap django nodejs"
+    default: "cakephp"
     documentation: |-
       Define the app list.  
   - name: POD_READY_THRESHOLD
