--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -15,7 +15,7 @@ images:
   to: krkn-hub
 - dockerfile_path: cerberus/Dockerfile_prow
   from: cerberus.prow.base
-  to: cerberus-prow
+  to: cerberus-main-prow
 promotion:
   namespace: chaos
   tag: latest
