--- a/ci-operator/step-registry/redhat-chaos/cerberus/redhat-chaos-cerberus-observer.yaml
+++ b/ci-operator/step-registry/redhat-chaos/cerberus/redhat-chaos-cerberus-observer.yaml
@@ -1,7 +1,7 @@
 observer:
   name: redhat-chaos-cerberus
   # Only one of the following two should be specified
-  from:
+  from_image:
     name: cerberus
     namespace: chaos
     tag: cerberus-prow
