--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__4.14-nightly.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__4.14-nightly.yaml
@@ -3,12 +3,19 @@ base_images:
     name: centos
     namespace: openshift
     tag: stream9
+  cerberus.prow.base:
+    name: cerberus
+    namespace: chaos
+    tag: latest
 build_root:
   from_repository: true
 images:
 - dockerfile_path: prow/Dockerfile
   from: os
   to: krkn-hub-414
+- dockerfile_path: cerberus/Dockerfile_prow
+  from: cerberus.prow.base
+  to: cerberus-main-prow-414
 releases:
   initial:
     integration:
@@ -30,6 +37,9 @@ tests:
 - as: krkn-hub-tests-414
   cron: 0 8 */2 * *
   steps:
+    observers:
+      enable:
+      - redhat-chaos-cerberus
     cluster_profile: aws
     env:
       SPOT_INSTANCES: "true"
