--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__4.14-nightly.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__4.14-nightly.yaml
@@ -3,10 +3,10 @@ base_images:
     name: centos
     namespace: openshift
     tag: stream9
-  cerberus.prow.base:
+  cerberus.prow:
     name: cerberus
     namespace: chaos
-    tag: latest
+    tag: cerberus-prow
 build_root:
   from_repository: true
 images:
