--- a/ci-operator/step-registry/redhat-chaos/cerberus/redhat-chaos-cerberus-observer.yaml
+++ b/ci-operator/step-registry/redhat-chaos/cerberus/redhat-chaos-cerberus-observer.yaml
@@ -1,10 +1,7 @@
 observer:
   name: redhat-chaos-cerberus
   # Only one of the following two should be specified
-  from_image:
-    name: cerberus
-    namespace: chaos
-    tag: cerberus-prow
+  from: cerberus.prow
   # Literal image stream tag that will be used to run the observer
   commands: redhat-chaos-cerberus-commands.sh
   resources:
