adding correct from

--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__4.14-nightly.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__4.14-nightly.yaml
@@ -14,7 +14,7 @@ images:
   from: os
   to: krkn-hub-414
 - dockerfile_path: cerberus/Dockerfile_prow
-  from: cerberus.prow.base
+  from: cerberus.prow
   to: cerberus-main-prow-414
 releases:
   initial:
