--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -1,5 +1,5 @@
 base_images:
-  cerberus.prow.base:
+  cerberus.prow:
     name: cerberus
     namespace: chaos
     tag: latest
@@ -13,9 +13,6 @@ images:
 - dockerfile_path: prow/Dockerfile
   from: os
   to: krkn-hub
-- dockerfile_path: cerberus/Dockerfile_prow
-  from: cerberus.prow.base
-  to: cerberus-main-prow
 promotion:
   namespace: chaos
   tag: latest
