--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__rosa-4.12-nightly.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__rosa-4.12-nightly.yaml
@@ -1,4 +1,8 @@
 base_images:
+  cerberus.prow:
+    name: cerberus
+    namespace: chaos
+    tag: cerberus-prow
   os:
     name: centos
     namespace: openshift
