--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__4.14-nightly-x86-64.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__4.14-nightly-x86-64.yaml
@@ -13,6 +13,9 @@ images:
 - dockerfile_path: prow/Dockerfile
   from: os
   to: krkn-hub-414-x86-64
+- dockerfile_path: cerberus/Dockerfile_prow
+  from: cerberus.prow
+  to: cerberus-prow-414-x86
 releases:
   initial:
     integration:
