--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__arm.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__arm.yaml
@@ -13,6 +13,9 @@ images:
 - dockerfile_path: prow/Dockerfile
   from: os
   to: krkn-hub-arm
+- dockerfile_path: cerberus/Dockerfile_prow
+  from: cerberus.prow
+  to: cerberus-prow-arm
 releases:
   arm64-latest:
     candidate:
