--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__aro-4.13-nightly.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__aro-4.13-nightly.yaml
@@ -17,6 +17,9 @@ images:
 - dockerfile_path: prow/Dockerfile
   from: os
   to: krkn-hub-aro
+- dockerfile_path: cerberus/Dockerfile_prow
+  from: cerberus.prow
+  to: cerberus-prow-aro
 releases:
   initial:
     integration:
