rehearse cucushift chain in x86+s390x cloud VPC multi-arch compute cluster

--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__multi-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__multi-nightly.yaml
@@ -49,6 +49,22 @@ resources:
       cpu: "1"
       memory: 4Gi
 tests:
+- as: ocp-e2e-private-ibmcloud-ovn-multi-s390x
+  cron: 17 8,20 * * *
+  steps:
+    cluster_profile: ibmcloud-multi-s390x
+    dependencies:
+      OPENSHIFT_INSTALL_RELEASE_IMAGE_OVERRIDE: release:multi-latest
+    env:
+      ADDITIONAL_WORKER_ARCHITECTURE: s390x
+      ADDITIONAL_WORKER_VM_TYPE: bz2-4x16
+      BASE_DOMAIN: ocp-dev-ppc64le.com
+      E2E_RUN_TAGS: '@ibmcloud-ipi and @heterogeneous and @network-ovnkubernetes and
+        not @fips'
+      LOKI_ENABLED: "false"
+      RESOURCE_GROUP: ibmcloud-multi-s390x-rg
+      TAG_VERSION: '@4.14'
+    workflow: openshift-e2e-ibmcloud-heterogeneous
 - as: aws-ipi-disconnected-private-f14
   cron: 36 3 11,26 * *
   steps:
