--- a/ci-operator/step-registry/openshift/e2e/ibmcloud/heterogeneous/openshift-e2e-ibmcloud-heterogeneous-workflow.yaml
+++ b/ci-operator/step-registry/openshift/e2e/ibmcloud/heterogeneous/openshift-e2e-ibmcloud-heterogeneous-workflow.yaml
@@ -4,8 +4,10 @@ workflow:
     pre:
     - chain: ipi-ibmcloud-pre
     - ref: ipi-install-heterogeneous
+    - ref: enable-qe-catalogsource
+    - chain: cucushift-installer-check
     test:
-    - ref: openshift-e2e-test
+    - chain: openshift-e2e-test-qe
     post:
     - chain: gather-core-dump
     - ref: gather-ibmcloud-resource
