HyperShift QE: mce-agent-disconnected 2

--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -23,6 +23,10 @@ base_images:
     name: assisted-service-index
     namespace: edge-infrastructure
     tag: latest
+  assisted-service-publish-index:
+    name: ocm-2.9
+    namespace: edge-infrastructure
+    tag: assisted-service-publish-index
   assisted-service-scripts:
     name: ocm-2.9
     namespace: edge-infrastructure
@@ -140,9 +144,6 @@ tests:
   cron: 0 8 * * *
   steps:
     cluster_profile: equinix-ocp-metal
-    env:
-      LVM_OPERATOR_SUB_CHANNEL: stable-4.14
-      MCE_VERSION: "2.4"
     workflow: hypershift-mce-agent-disconnected-conformance
 - as: e2e-kubevirt-conformance
   cron: 0 4 * * *
