Update job triggers for CI

--- a/ci-operator/jobs/stackrox/acs-fleet-manager/stackrox-acs-fleet-manager-main-presubmits.yaml
+++ b/ci-operator/jobs/stackrox/acs-fleet-manager/stackrox-acs-fleet-manager-main-presubmits.yaml
@@ -2,9 +2,7 @@ presubmits:
   stackrox/acs-fleet-manager:
   - agent: kubernetes
     always_run: true
-    branches:
-    - ^main$
-    - ^main-
+    skip_if_only_changed: "^docs/|\\.(md|adoc)$|^(README|LICENSE)$"
     cluster: build02
     context: ci/prow/e2e
     decorate: true
@@ -121,9 +119,7 @@ presubmits:
     trigger: (?m)^/test( | .* )image-push,?($|\s.*)
   - agent: kubernetes
     always_run: true
-    branches:
-    - ^main$
-    - ^main-
+    skip_if_only_changed: "^docs/|\\.(md|adoc)$|^(README|LICENSE)$"
     cluster: build02
     context: ci/prow/images
     decorate: true
