Add always_run: false

--- a/ci-operator/jobs/stackrox/acs-fleet-manager/stackrox-acs-fleet-manager-main-presubmits.yaml
+++ b/ci-operator/jobs/stackrox/acs-fleet-manager/stackrox-acs-fleet-manager-main-presubmits.yaml
@@ -1,7 +1,7 @@
 presubmits:
   stackrox/acs-fleet-manager:
   - agent: kubernetes
-    always_run: true
+    always_run: false
     skip_if_only_changed: "^docs/|\\.(md|adoc)$|^(README|LICENSE)$"
     cluster: build02
     context: ci/prow/e2e
@@ -62,7 +62,7 @@ presubmits:
           secretName: result-aggregator
     trigger: (?m)^/test( | .* )e2e,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - ^main$
     - ^main-
